examples/test/testpolicy18356.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18356
  namespace: namespace108
spec:
  podSelector:
    matchLabels:
      key34: value30
      key38: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value1
          key11: value9
          key13: value27
      podSelector:
        matchLabels:
          key5: value30
          key14: value42
          key19: value45
